tests/valid/ternary/02_null_union_like.cps
class A { }
let a: A = null;
let r = (true) ? a : null;   // resultado A (NULL permitido hacia ref)
