tests/invalid/ternary/02_incompatible_branches.cps
let a: integer = 1;
let s: string = "x";
let r = (true) ? a : s;   // integer vs stringE070
